--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
             <li class="list-item">
               <a class="link" href="./index.html">Студія</a>
             </li>
-            <li class="list-item">
+            <li class="list-item current">
               <a class="link active" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="list-item">
@@ -88,6 +88,9 @@
                   width="370"
                   height="294"
                 />
+                <p class="img-description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
                 <div class="port-txt">
                 <h2 class="port-item">Технокряк</h2>
                 <p class="port-name">Веб-сайт</p>
