--- a/portfolio.html
+++ b/portfolio.html
@@ -79,18 +79,23 @@
             </li>
           </ul>
           <ul class="port-list">
-            <li class="portfolio first-item">
+            <li class="portfolio">
               <a class="photo-link" href="">
-                <img
+                <div class="portfolio-thumb">
+                  <img
                   class="port-photo"
                   src="./images/portfolio/img1.jpg"
                   alt="проєкт веб-сайту"
                   width="370"
                   height="294"
                 />
-                <p class="img-description">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
-                </p>
+                  <div class="overlay">
+                    <p class="img-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="port-txt">
                 <h2 class="port-item">Технокряк</h2>
                 <p class="port-name">Веб-сайт</p>
@@ -99,6 +104,7 @@
             </li>
             <li class="portfolio">
               <a class="photo-link" href="">
+                <div class="portfolio-thumb">
                 <img
                   class="port-photo"
                   src="./images/portfolio/img2.jpg"
@@ -106,6 +112,13 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                    <p class="img-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="port-txt">
                 <h2 class="port-item">
                   Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -116,6 +129,7 @@
             </li>
             <li class="portfolio">
               <a class="photo-link" href="">
+                <div class="portfolio-thumb">
                 <img
                   class="port-photo"
                   src="./images/portfolio/img3.jpg"
@@ -123,6 +137,13 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                    <p class="img-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="port-txt">
                 <h2 class="port-item">
                   Ресторан <span lang="en">Seafood</span>
@@ -133,6 +154,7 @@
             </li>
             <li class="portfolio">
               <a class="photo-link" href="">
+                <div class="portfolio-thumb">
                 <img
                   class="port-photo"
                   src="./images/portfolio/img4.jpg"
@@ -140,6 +162,13 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                    <p class="img-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="port-txt">
                 <h2 class="port-item">Проєкт<span lang="en">Prime</span></h2>
                 <p class="port-name">Маркетинг</p>
@@ -148,6 +177,7 @@
             </li>
             <li class="portfolio">
               <a class="photo-link" href="">
+                <div class="portfolio-thumb">
                 <img
                   class="port-photo"
                   src="./images/portfolio/img5.jpg"
@@ -155,6 +185,13 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                    <p class="img-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="port-txt">
                 <h2 class="port-item">Проєкт<span lang="en">Boxes</span></h2>
                 <p class="port-name">Додаток</p>
@@ -163,6 +200,7 @@
             </li>
             <li class="portfolio">
               <a class="photo-link" href="">
+                <div class="portfolio-thumb">
                 <img
                   class="port-photo"
                   src="./images/portfolio/img6.jpg"
@@ -170,6 +208,13 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                    <p class="img-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="port-txt">
                 <h2 class="port-item">
                   <span lang="en">Inspiration has no Borders</span>
@@ -180,6 +225,7 @@
             </li>
             <li class="portfolio">
               <a class="photo-link" href="">
+                <div class="portfolio-thumb">
                 <img
                   class="port-photo"
                   src="./images/portfolio/img7.jpg"
@@ -187,6 +233,13 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                    <p class="img-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="port-txt">
                 <h2 class="port-item">
                   Видання <span lang="en">Limited Edition</span>
@@ -197,6 +250,7 @@
             </li>
             <li class="portfolio">
               <a class="photo-link" href="">
+                <div class="portfolio-thumb">
                 <img
                   class="port-photo"
                   src="./images/portfolio/img8.jpg"
@@ -204,6 +258,13 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                    <p class="img-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="port-txt">
                 <h2 class="port-item">Проєкт <span lang="en">LAB</span></h2>
                 <p class="port-name">Маркетинг</p>
@@ -212,6 +273,7 @@
             </li>
             <li class="portfolio">
               <a class="photo-link" href="">
+                <div class="portfolio-thumb">
                 <img
                   class="port-photo"
                   src="./images/portfolio/img9.jpg"
@@ -219,6 +281,13 @@
                   width="370"
                   height="294"
                 />
+                <div class="overlay">
+                    <p class="img-desc">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. 
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="port-txt">
                 <h2 class="port-item">
                   <span lang="en">Growing Business</span>
